--- a/000.md
+++ b/000.md
@@ -1,1 +1,24 @@
-<font="楷体">序言</>
+<font face="楷体">序言</font>
+[^要注明的文本]
+
+
+创建脚注格式类似这样 [^1]。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[^1]: 菜鸟教程 -- 学的不仅是技术，更是梦想！！！
