--- a/001.md
+++ b/001.md
@@ -1,9 +1,9 @@
 第一回：景阳冈武松打虎 潘金莲嫌夫卖风月（万历本）
-
+====================================================
 
 词曰：
 
-    「丈夫只手把吴钩，欲斩万人头。如何铁石打成心性，却为花柔。请看项籍并刘季，一似使人愁；只因撞着虞姬戚氏，豪杰都休。」
+    丈夫只手把吴钩，欲斩万人头。如何铁石打成心性，却为花柔。请看项籍并刘季，一似使人愁；只因撞着虞姬戚氏，豪杰都休。
 
 此一只词儿，单说着“情色”二字，乃一体一用。故色绚于目，情感于心，情色相生，心目相视。亘古及今，仁人君子，弗合忘之。晋人云：「情之所钟，正在我辈。」如磁石吸铁，隔碍潜通。无情之物尚尔，何况为人，终日在情色中做活计一节。须而丈夫，只手把吴钩。吴钩，乃古剑也。古有「干将」、「莫邪」、「太阿」、「吴钩」、「鱼肠」、「躅镂」之名，言丈夫心肠如铁石，气概贯虹蜺，不免屈志于女人。
 
@@ -11,9 +11,8 @@
 
 「大王莫非以贱妾之故，有费军中大事？」霸王曰：「不然。吾与汝不忍相舍故耳！况汝这般容色，刘邦乃酒色之君，必见汝而纳之。」虞姬泣曰：「妾宁以义死，不以苟生！」遂请王之宝剑，自刎而死。霸王因大恸，寻以自刭。史官有诗叹曰：
 
-    「拔山力尽霸图隳， 倚剑空歌不逝骓；
-
-    明月满营天似水， 那堪回首别虞姬。」
+    拔山力尽霸图隳， 倚剑空歌不逝骓；
+    明月满营天似水， 那堪回首别虞姬。
 
 那汉王刘邦原是泗上亭长，提三尺剑，硭砀山斩白蛇起手。二年亡秦，五年灭楚，挣成天下。只因也是宠着个妇人，名唤戚氏。夫人所生一子，名赵王如意，因被吕后妒害，心甚不安。一日，高祖有疾，乃枕戚夫人腿而卧。夫人哭曰：「陛下万岁后，妾母子何所托？」帝曰：「不难。吾明日出朝，废太子而立尔子，意下如何？」戚夫人乃收泪谢恩。吕后闻之，密召张良谋计。良举荐商山四皓，下来辅佐太子。一日，同太子入朝，高祖见四人须鬓交白，衣冠甚伟。各问姓名。一名东圆公，一名绮里季，一名夏黄公，一名角里先生。因大惊曰：「朕昔求聘诸公，如何不至？今日乃从吾儿所游？」四皓答曰：「太子乃守成之主也。」高祖闻之，愀然不悦。比及四皓出殿，乃召戚夫人指示之曰：「我欲废太子，况彼四人辅佐，羽翼已成，卒难摇动矣！」戚夫人遂哭泣不止。帝乃作歌以解之：
 
@@ -54,9 +53,8 @@
 
 当下这只猛虎，被武松没顿饭之间，一顿拳脚，打的动不得了。使的这汉子，口里儿自气喘不息。武松放了手，来松树边寻那打折的稍棒；只怕大虫不死，向身上又打了十数下，那大虫气都没了。武松寻思：「我就势把这大虫拖下岗子去。」就血泊中双手来捉时，那里提得动？原来使尽了气力，手脚都疎软了。武松正坐在石上歇息，只听草坡里刷剌剌响。武松口中不言，心下惊恐：「天色已黑了，倘或又跳出一个大虫来，我却怎生鬬得过他？」刚言未毕，只见坡下钻出两只大虫来，諕武松大惊道：「阿呀！今番我死也！」只见那两个大虫，于面前直立起来。武松定睛看时，却是个人把虎皮缝做衣裳，头上带着虎磕脑。那两人手里各拏着一条五股刚叉，见了武松倒头便拜，说道：「壮士，你是人也？神也？端的吃了总律心，豹子肝，狮子腿，胆倒包了身躯！不然，如何独自一个，天色渐晚，又没器械，打死这个伤人大虫？我们在此观看多时了，端的壮士高姓大名？」武松道：「我行不更名，坐不改姓。自我便是阳谷县人氏，姓武名松，排行第二。」因问：「你两个是甚么人？」那两个道：「不瞒壮士说，我们是本处打猎户。因为岗前这只虎，夜夜出来，伤人极多；只我们猎户，也折了七八个，过路客人，不计其数。本县知县相公，着落我们众猎户，限日捕捉，得获时，赏银三十两；不获时，定限吃拷。叵耐这业畜势大，难近得他，谁敢向前？我们只和数十乡夫在此，远远地安下窝弓、药箭等他。正在这里埋伏，却见你大刺刺从岗子上走来，三拳两脚，和大虫敌鬬，把大虫登时打死了。未知壮士身上有多少力？俺众人把大虫绻了，请壮士下岗，往本县去见知县相公讨赏去来。」于是众乡夫猎户，约凑有七、八十人，先把死大虫抬在前面，将一个兜轿抬了武松，径投本处一个土户家。那户里正，都在庄前迎接，把这大虫扛在草庭上。却有本县里老，都来相探，问了武松姓名，因把打虎一节说了一遍。众人道：「真乃英雄好汉！」那众猎户先把野味将来与武松把盏，吃得大醉。打扫客房，武松歇息。到天明，里老先去县里报知，一面合具虎床，安排花红软轿，迎送武松到县衙前。清河县知县使人来接到县内厅上。那满县人民听得说，一个壮士打死了景阳岗上大虫，迎贺将来，尽皆出来观看，哄动了那个县治。武松到厅上下了轿，扛着大虫在厅前。知县看了武松这般模样，心中自忖道：「不恁地，怎打得这个猛虎？」便唤武松上厅来。参见毕，将打虎首尾，诉说了一遍，两边官吏，都惊呆了。知县就厅上赐了几杯酒，将库中众土户出纳的赏钱三十两，就赐与武松。武松禀道：「小人托赖相公的福荫，偶然侥幸，打死了这个大虫，非小人之能。如何敢受这三十两赏赐？给发与众猎户，因这畜生，受了相公许多责罚。何不就把这赏给散与众人去？也相公恩沾，小人义气。」知县道：「既是如此，任从壮士处分。」武松就把这三十两赏钱，在厅上俵散与众猎户去了。知县见他仁德忠厚，又是一条好汉，有心要抬举他。便道：「虽是阳谷县的人民，与我这清河县只在咫尺。我今日就参你在我这县里，做个巡捕的都头。专一河东水西，擒拏盗贼，你意下如何？」武松跪谢道：「若蒙恩相抬举，小人终身受赐。」知县随即唤押司去了文案，当日便参武松做了巡捕都头。众里正大户，都来与武松作贺，庆喜连连夸官，吃了三五日酒。正要阳谷县抓寻哥哥，不料又在清河县做了都头。一日在街上闲游，喜不自胜。传得东平一府两县，皆知武松之名。有诗为证：
 
-「壮士英雄艺略芳， 挺身直上景阳岗；
-
-醉来打死山中虎， 自此声名播四方！」
+    「壮士英雄艺略芳， 挺身直上景阳岗；
+    醉来打死山中虎， 自此声名播四方！」
 
 按下武松，单表武大自从与兄弟分居之后，因时遭荒馑，搬移在清河县紫石街赁房居住。人见他为人懦弱，模样猥衰，起了他个浑名，叫做三寸丁，谷树皮。俗语言其身上粗躁，头脸窄狭故也。以此人见他这般软弱朴实，多欺负他。武太并无生气，常时回避便了。看官听说：世上惟有人心最歹，软的又欺，恶的又怕；太刚则拆，太柔则废。古人有几句格言，说的好：
 
