--- a/000.md
+++ b/000.md
@@ -4,21 +4,28 @@
 
 创建脚注格式类似这样 [^1]。
 
+[^_^]:
 
 
 
 
 
 
+[csdn]开始注解
 
-
-
-
-
-
-
-
+![code-past] "百度logo"
 
 
 
 [^1]: 菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+
+
+--------------------------------
+[csdn]:http://blog.csdn.net/guodongxiaren "我的博客"
+[zhihu]:https://www.zhihu.com/people/guodongxiaren "我的知乎，欢迎关注"
+[weibo]:http://weibo.com/linpiaochen
+[baidu-logo]:http://www.baidu.com/img/bdlogo.gif "百度logo"
+[weibo-logo]:/img/weibo.png "点击图片进入我的微博"
+[csdn-logo]:/img/csdn.png "我的CSDN博客"
+[code-past]:/zhu.jfif  "公众号：编程往事"
+[zhihu-shield]:https://img.shields.io/badge/dynamic/json?color=0084ff&logo=zhihu&label=%E6%9E%9C%E5%86%BB%E8%99%BE%E4%BB%81&query=%24.data.totalSubs&url=https%3A%2F%2Fapi.spencerwoo.com%2Fsubstats%2F%3Fsource%3Dzhihu%26queryKey%3Dguodongxiaren
