--- a/001.md
+++ b/001.md
@@ -7,9 +7,7 @@
 
 此一只词儿，单说着“情色”二字，乃一体一用。故色绚于目，情感于心，情色相生，心目相视。亘古及今，仁人君子，弗合忘之。晋人云：「情之所钟，正在我辈。」如磁石吸铁，隔碍潜通。无情之物尚尔，何况为人，终日在情色中做活计一节。须而丈夫，只手把吴钩。吴钩，乃古剑也。古有「干将」、「莫邪」、「太阿」、「吴钩」、「鱼肠」、「躅镂」之名，言丈夫心肠如铁石，气概贯虹蜺，不免屈志于女人。
 
-题起当时西楚霸王，姓项名籍，单名羽字。因秦始皇无道，南修五岭，北筑长城，东填大海，西建阿房，并吞六国，坑儒焚典，因与汉王刘邦，单名季字，时二人起兵，席卷三秦，灭了秦国，指鸿沟为界，平分天下。因用范增之谋，连败汉王七十二阵。只因宠着一个妇人，名叫虞姬，有倾城之色，载于军中，朝夕不离。一旦被韩信所败，夜走阴陵。为追兵所逼，霸王败向江东取救，因舍虞姬不得，又闻四面皆楚歌。事发，叹曰：「力拔山兮气盖世，时不利兮骓不逝。骓不逝兮可奈何？虞兮虞兮奈若何！」歌毕，泪下数行，虞姬曰：
-
-「大王莫非以贱妾之故，有费军中大事？」霸王曰：「不然。吾与汝不忍相舍故耳！况汝这般容色，刘邦乃酒色之君，必见汝而纳之。」虞姬泣曰：「妾宁以义死，不以苟生！」遂请王之宝剑，自刎而死。霸王因大恸，寻以自刭。史官有诗叹曰：
+题起当时[西楚霸王]，姓项名籍，单名羽字。因秦始皇无道，南修五岭，北筑长城，东填大海，西建阿房，并吞六国，坑儒焚典，因与汉王刘邦，单名季字，时二人起兵，席卷三秦，灭了秦国，指鸿沟为界，平分天下。因用范增之谋，连败汉王七十二阵。只因宠着一个妇人，名叫虞姬，有倾城之色，载于军中，朝夕不离。一旦被韩信所败，夜走阴陵。为追兵所逼，霸王败向江东取救，因舍虞姬不得，又闻四面皆楚歌。事发，叹曰：「力拔山兮气盖世，时不利兮骓不逝。骓不逝兮可奈何？虞兮虞兮奈若何！」歌毕，泪下数行，虞姬曰：「大王莫非以贱妾之故，有费军中大事？」霸王曰：「不然。吾与汝不忍相舍故耳！况汝这般容色，刘邦乃酒色之君，必见汝而纳之。」虞姬泣曰：「妾宁以义死，不以苟生！」遂请王之宝剑，自刎而死。霸王因大恸，寻以自刭。史官有诗叹曰：
 
     拔山力尽霸图隳， 倚剑空歌不逝骓；
     明月满营天似水， 那堪回首别虞姬。
@@ -20,13 +18,12 @@
 
 歌讫，后遂不果立赵王矣。高祖崩世，吕后酒酖杀赵王如意，人彘了戚夫人，以除其心中之患。诗人评此二君，评到个去处，说刘、项者，固当世之英雄，不免为二妇人，以屈其志气。虽然，妻之视妾，名分虽殊，而戚氏之祸，尤惨于虞姬。然则妾妇之道，以事其丈夫，而欲保全首领于牖下，难矣！观此二君，岂不是「撞着虞姬戚氏，豪杰都休。」有诗为证：
 
-「刘项佳人绝可怜， 英雄无策庇婵娟；
-
-戚姬葬处君知否？ 不及虞姬有墓田。」
+    「刘项佳人绝可怜， 英雄无策庇婵娟；
+    戚姬葬处君知否？ 不及虞姬有墓田。」
 
 说话的，如今只爱说这情色二字做甚？故士矜才则德薄，女衍色则情放。若乃持盈慎满，则为端士淑女，岂有杀身之祸？今古皆然，贵贱一般。如今这一本书，乃虎中美女后引出一个风情故事来。一个好色的妇女，因与了破落户相通，日日追欢，朝朝迷恋。后不免尸横刀下命染黄泉，永不得着绮穿罗，再不能施朱付粉。静而思之，着甚来由！况这妇人他死有甚事？贪他的，断送了堂堂六尺之躯；爱他的，丢了泼天閧产业。惊了东平府，大闹了清河县，端的不知谁家妇女？谁的妻小？后日乞何人占用？死于何人之手？正是：
 
-「说时华岳山峰歪， 道破黄河水逆流！」
+    「说时华岳山峰歪， 道破黄河水逆流！」
 
 话说宋徽宗皇帝，政和年间，朝中宠信高、杨、童、蔡四个奸臣，以致天下大乱，黎民失业，百姓倒悬；四方盗贼蜂起，罡星下生人间，搅乱大宋花花世界。四处反了四大寇。那四大寇：山东宋江，淮西王庆，河北田虎，江南方腊，皆轰州劫县，放火杀人，僣称王号。惟有宋江替天行道，专报不平，杀天下赃官污吏，豪恶刁民。那时山东阳谷县，有一人姓武，名植，排行大郎。有个嫡亲同胞兄弟，名唤武松。其人身长七尺，膀阔三停，自幼有膂力，学得一手好鎗棒。他的哥哥武大，生的身不满三尺，为人懦弱，又头脑浊蠢可笑，平日本分，不惹是非。因时遭荒馑，将租房儿卖了，与兄弟分居，搬移在清河县居住。这武松因酒醉，打了童枢密，单身独自逃在沧州横海郡小旋风柴进庄上，他那里招览天下英雄豪杰，仗义疎财，人号他做「小孟尝君」。柴大官人乃是周朝柴世宗嫡派子孙，那里躲逃。柴进因见武松是一条好汉，收揽在庄上。不想武松就害起疟疾来，住了一年有余，因思想哥哥武大，告辞归家。在路上行了几日，来到阳谷县地方。那时山东界上，有一座景阳岗，山中有一只吊睛白额虎，食得路绝人稀。官司杖限猎户，擒捉此虎。岗子路上两边都有榜文，可教过往经商，结伙成群，于巳、午、未三个时辰过岗，其余不许过岗。这武松听了，呵呵大笑。就在路傍酒店内，吃了几碗酒，壮着胆。横拖着防身稍棒，浪浪沧沧，大扠步走上岗来。不半里之地，见一座山神庙门首，贴着一张印信榜文。武松看时，上面写道：「景阳岗上，有一只大虫，近来伤人甚多；见今立限各乡并猎户人等，打捕住时，官给赏银三十两。如有过往客商人等，可于巳、午、未三个时辰，结伙过岗。其余时分，及单身客旅，白日不许过岗，恐被伤害性命不便。各宜知悉。」武松喝道：「怕什么鸟！」且只顾上岗去，看有甚大虫？武松将棒绾在胁下，一步步上那岗来。回看那日色，渐渐下山，此正是十月间天气，日短夜长，容易得晚。武松走了一会，酒力发作，远远望见乱树林子，直奔过树林子，见一块光挞挞地大青卧牛石，把那棒倚在一边，放翻身体，却待要睡，但见青天忽然起一阵狂风。看那风时，但见：
 
@@ -58,15 +55,14 @@
 
 按下武松，单表武大自从与兄弟分居之后，因时遭荒馑，搬移在清河县紫石街赁房居住。人见他为人懦弱，模样猥衰，起了他个浑名，叫做三寸丁，谷树皮。俗语言其身上粗躁，头脸窄狭故也。以此人见他这般软弱朴实，多欺负他。武太并无生气，常时回避便了。看官听说：世上惟有人心最歹，软的又欺，恶的又怕；太刚则拆，太柔则废。古人有几句格言，说的好：
 
-「柔软立身之本，刚强惹祸之胎；无争无竞是贤才，亏我些儿何碍？
-
-青史几场春梦，红尘多少奇才，不须计较巧安排，守分而今见在。」
+    「柔软立身之本，刚强惹祸之胎；无争无竞是贤才，亏我些儿何碍？
+    青史几场春梦，红尘多少奇才，不须计较巧安排，守分而今见在。」
 
 且说武大终日挑担子出去街上，卖炊饼 度日，不幸把浑家故了，丢下个女孩儿，年方十二岁，名唤迎儿。爷儿两个过活，那消半年光景，又消拆了资本，移在大街坊，张大户家临街房居住，依旧做买卖。张宅家下人，见他本分，常看顾他，照顾他炊饼；闲时在他铺中坐，武大无不奉承。
 
 因此张宅家下人个个都欢喜，在大户面时，一力与他说方便。因此大户连房钱也不问武大要。这大户家有万贯家财，百间房屋，年约六旬之上，身边寸男尺女皆无。妈妈余氏，主家严励，房中并无清秀使女。一日，大户拍胸，叹了一口气。妈妈问道：「你田产丰盛，资财充足，闲中何故叹气？」大户道：「我许大年纪，又无儿女，虽有家财，终何大用？」妈妈道：「既然如此说，我教媒人替你买两个使女，早晚习学弹唱，服侍你便了。」大户心中大喜，谢了妈妈。过了几时，妈妈果然教媒人来，与大户买了两个使女，一个叫做潘金莲，一个唤做白玉莲。这潘金莲却是南门外潘裁的女儿，排行六姐。因他自幼生得有些颜色，缠得一双好小脚儿，因此小名金莲。父亲死了，做娘的因度日不过，从九岁卖在王招宣府里，习学弹唱，就会描眉画眼，傅粉施朱，梳一个缠髻儿，着一件扣身衫子，做张做势，乔模乔样。况他本性机变伶俐，不过十五，就会描鸾刺绣，品竹弹丝，又会一手琵琶。后王招宣死了，潘妈妈争将出来，三十两银子，转卖与张大户家，与玉莲同时进门。大户家习学弹唱，金莲学琵琶，玉莲学筝。玉莲亦年方二八，乃是乐户人家女子，生得白净，小字玉莲，这两个同房歇卧。主家婆余氏，初是甚是抬举二人，不曾上锅排备洒扫，与他金银首饰，妆束身子。后日不料白玉莲死了，止落下金莲一人，长成一十八岁，出落的脸衬桃花，眉湾新月，尤细尤湾；张大户每要收他，只怕主家婆利害，不得手。一日，主家婆邻家赴席不在，大户暗把金莲唤至房中，遂收用了。正是：
 
-「美玉无瑕，一朝损坏； 珍珠何日，再得完全？」
+    「美玉无瑕，一朝损坏； 珍珠何日，再得完全？」
 
 大户自从收用金莲之后，不觉身上添了四五件病症，端的那五件：
 
@@ -85,7 +81,6 @@
 诗曰
 
 「叔嫂萍踪得偶逢， 娇娆遍逞秀仪容。
-
 私心便欲成欢会， 暗把邪言钓武松。」
 
 原来这妇人甚是言语撇清。武松道：「家兄不惹祸，免嫂嫂忧心。」二人只在楼上说话未了，只见武大买了些肉菜、果饼归来，放在厨下，走上楼来，叫道：「大嫂，你且下来安排则个。」那妇人应道：「你看那不晓事的！叔叔在此，无人陪侍，却交我撇了下去。」武松道：「嫂嫂请方便。」妇人道：「何不去间壁请王干娘来安排便了，只是这般不见便！」武大便自去央了间壁王婆子来，安排端正，都拿上楼来，摆在桌子上。无非是些鱼肉果菜点心之类，随即荡上酒来。武大教妇人坐了主位，武松对席，武大打横，三人坐下，把酒来斟，武大筛酒 在各人面前。那妇人拿起酒来，道：「叔叔休怪，没甚管待，请杯儿水酒。」武松道：「感谢嫂嫂，休这般说。」武大只顾上下筛酒，那里来管闲事？那妇人笑容可鞠，满口儿叫：「叔叔，怎的肉果儿也不拣一筯儿？」拣好的递将过来。武松是个直性汉子，只把做亲嫂嫂相待。谁知这妇人是个使女出身，惯会小意儿。亦不想这妇人一片引人心，那武大又是善弱的人，那里会管待人。妇人陪武松吃了几杯酒，一双眼只看着武松身上，武松乞他看不过，只低了头不理他。吃了一歇，酒阑了，便起身。武大道：「二哥，没事再吃几杯儿去。」武松道：「生受！我再来望哥哥、嫂嫂罢。」都送下楼来。出的门外，妇人便道：「叔叔是必上心，搬来家里住，若是不搬来，俺两口儿也吃别人笑话；亲兄弟，难比别人，与我们争口气，也是好处！」武松道：「既是吾嫂厚意，今晚有行李便取来。妇人道：「叔叔是必记心者，奴这里专候。」正是：
@@ -95,29 +90,28 @@
 有诗为证：
 
 「可怪金莲用意深， 包藏淫行荡春心；
-
 武松正大原难犯， 耿耿清名抵万金。」
 
 当日这妇人情意，十分殷动。却说武松到县前客店内，收拾行李铺盖，交士兵挑了，引到哥家。那妇人见了，强如拾了金宝一般欢喜。旋打扫一间房，与武松安顿停当。武松分付士兵回去，当晚就在哥家宿歇。次日早起，妇人也慌忙起来，与他烧汤净面。武松梳洗裹帻，出门去县里画卯，妇人道：「叔叔画了卯，早些来家吃饭，休去别处吃了。」武松应说，到县里画卯已毕，伺候了一早晨，回到家中。那妇人又早齐齐整整，安排下饭，三口儿同吃了饭。妇人双手便捧一杯茶来，递与武松。武松道：「交嫂嫂生受，武松寝食不安！明日县里拨个士兵来使唤。」那妇人连声叫道：「叔叔，却怎生这般计较？自家骨肉，又不服事了别人！虽然有这小丫头迎儿，奴家见他拏东拏西，蹀里蹀科，也不靠他。就是拨了士兵来，那厮上锅上灶不干净，奴眼里也看不上这等人。」武松道：「恁的，都生受嫂嫂了！」有诗为证：
 
-「武松仪表甚搊搜， 阿嫂淫心不可收；
-
-笼络归来家里住， 要同云雨会风流。」
+    「武松仪表甚搊搜， 阿嫂淫心不可收；
+    笼络归来家里住， 要同云雨会风流。」
 
 话休絮烦。自从武松搬来哥家里住，取些银子出来与武大，交买饼馓茶果，请那两边邻舍。都闻分子，来与武松人情。武大又按排了回席，都不在话下。过了数日，武松取出一疋彩色段子，与嫂嫂做衣服。那妇人堆下笑来，便道：「叔叔，如何使得！既然赐与奴家，不敢推辞！」只得接了，道个万福。自此武松只在哥家歇宿。武大依前上街，挑卖炊饼。武松每日，自去县里承差应事，不论归迟归早，妇人顿羹顿饭，欢天喜地服事武松。武松倒安身不得，那妇人时常把些言语来拨他。武松是个硬心的直汉，有话即长，无话即短。不觉过了一月有余，看看十一月天气，连日朔风紧起。只见四下彤云密布，又早纷纷扬扬，飞下一天瑞雪来。但见：
 
-「万里彤云密布，空中祥瑞飘帘，琼花片片舞前檐。剡溪当此际，濡伋子猷船，顷刻楼台都压倒，江山银色相连，飞浅撒粉漫连天，当时吕蒙正，窑内嗟无钱。」
+    「万里彤云密布，空中祥瑞飘帘，琼花片片舞前檐。剡溪当此际，濡伋子猷船，顷刻楼台都压倒，江山银色相连，飞浅撒粉漫连天，当时吕蒙正，窑内嗟无钱。」
 
 当日这雪直下到一更时分，都似银妆世界，玉碾乾坤。次日，武松果去县里画卯，直到日中未归。武大被妇人早赶出去做买卖，央及间壁王婆买了些酒肉，去武松房里，簇了一盆炭火。心里自想道：「我今日着实撩鬬他一鬬，不怕他不动情！」那妇人独自冷冷清清立在帘儿下，望见武松正在雪里，踏着那乱琼碎玉归来。妇人推起帘子，迎着笑道：「叔叔，寒冷？」武松道：「感谢嫂嫂罣心！」入将门来，便把毡笠儿除将下来，那妇人将手去接。武松道：「不劳嫂嫂生受！」自把雪来拂了，挂在壁子上。随即解了缠带，脱了身上鹦哥绿纻丝衲袄，入房内。那妇人便道：「奴等了一早晨，叔叔怎的不归来吃早饭？」武松道：「早间有一相识请我吃饭了，都纔又有一个作杯，我不耐烦，一直走到家来。」妇人道：「既恁的，请叔叔向火。」武松道：「正好。」便脱了油靴，换了一双袜子，穿了暖鞋，掇条凳子，自近火盆边坐的。那妇人早令迎儿把前门上了闩，后门也关了。都换些煮酒菜蔬入房里来，摆在桌子上。武松问道：「哥哥那里去了？」妇人道：「你哥哥每自出去做些买卖，我和叔叔自吃三杯。」武松道：「一发等哥来家吃也不迟。」妇人道：「那里等的他？」说由未了，只见迎儿小女早暖了一注酒来。武松道：「不必嫂嫂费心，待武二自斟。」妇人也掇一条凳子，近火边坐了。桌上摆着杯盘，妇人拏盏酒，擎在手里，看着武松：「叔叔满饮此杯！」武松接过酒去，一饮而尽。那妇人又筛一杯来，说道：「天气寒冷，叔叔饮个成双的盏儿。」武松道：「嫂嫂自饮。」接来又一饮而尽。武松都筛一杯酒，递与妇人，妇人接过酒来，呷了，都拏注子再斟酒，放在武松面前。那妇人一径将酥胸微露，云鬟半亸，脸上堆下笑来，说道：「我听得人说，叔叔在县前街上，养着个唱的，有这话么？」武松道：「嫂嫂休听的人胡说，我武二从来不是这等人！」妇人道：「我不信，只怕叔叔口头不是心头。」武松道：「嫂嫂不信时，只问哥哥就见了。」妇人道：「呵呀！你休说，他那里晓得甚么？如在醉生梦死一般！他若知道时，不卖炊饼了。叔叔且请一杯！」连筛了三四杯饮过。那妇人也有三杯酒落肚，烘动春心，那里按纳得住？欲心如火，只把闲话来说。武松也知了八、九分，自己只把头来低了，都不来兜揽。妇人起身去荡酒，武松自在房内，都拏火筯簇火。妇人良久暖了一注子酒来到房里，一只手拏着注子，一只手便去武松肩上只一捏，说道：「叔叔，只穿这些衣服，不寒冷么？」武松已有五七分不自在，也不理他。妇人见他不应，匹手便来夺火筯，口里道：「叔叔你不会簇火，我与你拨火。只要一似火盆来热，便好。」武松有八九分焦燥，只不做声。这妇人也不看武松焦燥，便丢下火筯，却筛一盏酒来，自呷了一口，剩下大半盏酒，看着武松道：「你若有心，吃我这半杯儿残酒。」乞武松匹手夺过来，泼在地下。说道：「嫂嫂，不要恁的不识羞耻！」把手只一推，争些儿把妇人推了一交。武松睁起眼来，说道：「武二是个顶天立地的噙齿戴发的男子汉，不是那等败坏风俗伤人伦的猪狗。嫂嫂休要这般不识羞耻，为此等的勾当！倘有些风吹草动，我武二眼里认的是嫂嫂，拳头都不认的是嫂嫂！再来休要如此所为。」妇人吃他几句，抢的通红了面皮，便叫迎儿收拾了碟盏家火。口里指着说道：「我自作耍子，不值得便当真起来！好不识人敬！」收了家火，自往厨下去了。有诗为证：
 
-「泼言柔心太不良， 贪淫无耻坏纲常；
-
-席间尚且求云雨， 反被都头骂一场。」
+    「泼言柔心太不良， 贪淫无耻坏纲常；
+    席间尚且求云雨， 反被都头骂一场。」
 
 这妇人见抅搭武松不动，反被他抢白了一场。武松自在房中气忿忿的，自己寻思。天色都早申牌时分，武大挑着担儿大雪里归来。推开门，放下担儿，进的房来，见妇人一双眼哭的红红的，便问道：「你和谁闹来？」妇人道：「都是你这不争气的，交外人来欺负我！」武大道：「谁敢来欺负你？」妇人道：「情知是谁！争奈武二那厮，我见他大雪里归来，好意安排些酒饭与他吃，他见前后没人，便把言语来调戏我。便是迎儿眼见，我不赖他！」武大道：「我兄弟不是这等人，从来老实！休要高声，乞邻舍听见笑话！」武大撇了妇人，便来武松房里。叫道：「二哥，你不曾吃点心，我和你吃些个。」武松只不做声。寻思了半晌，脱了丝鞋，依旧穿上油腊靴，着了上盖，戴上毡笠儿。一面系缠带，一面出大门。武大叫道：「二哥你那里去？」也不答，一直只顾去了。武大回到房内，问妇人道：「我叫他，又不应，只顾往县前那条路去了。正不知怎的了！」妇人骂道：「贼混沌虫，有甚么难见处！那厮羞了，没脸儿见你，走了出去。我猜他一定叫个人来搬行李，不要在这里住；都不道你留他。」武大道：「他搬了去，须乞别人笑话！」妇人骂道：「混沌魍魉！他来调戏我，到不乞别人笑话？你要便和他过去，我都做不的这样人。你与了我一纸休书，你自留他便了！」武大那里再敢开口，被这妇人倒数骂了一顿。正在家两口儿絮聒，只见武松引了个士兵，拿着条扁担，径来房内，收拾行李便出门。武大走出来，叫道：「二哥，做甚么便搬了去？」武松道：「哥哥不要问，说起来装你的幌子。只由我自去便了！」武大那里再敢问备细，由武松搬了出去。那妇人在里面喃喃吶吶骂道：「都也好！只道是亲难转债，人自知道。一个兄弟做了都头，怎的养活了哥嫂。都不知反来嚼咬人！正是花木瓜，空好看，搬了去，到谢天地，且得冤家离眼前。」武大见老婆这般言语，不知怎的了，心中只是放去不下。自从武松搬去县前客店宿歇，武大自依前上街卖炊饼，本待要去县前寻兄弟说话，都被这妇人千叮万嘱，分付交不要去兜揽他，因此武大不敢去寻武松。有诗为证：
 
-「雨意云情不遂谋， 心中谁信起戈矛；
-
-生将武二搬离去， 骨肉番令作寇仇。」
+    「雨意云情不遂谋， 心中谁信起戈矛；
+    生将武二搬离去， 骨肉番令作寇仇。」
 
 毕竟未知后来何如，且听下回分解：
+
+-------------------------------------------------------------------
+[西楚霸王]:zhu.jfif "指项羽，测试一下看看是不是可以写很长"
