--- a/001.md
+++ b/001.md
@@ -103,7 +103,7 @@
 
 当日这雪直下到一更时分，都似银妆世界，玉碾乾坤。次日，武松果去县里画卯，直到日中未归。武大被妇人早赶出去做买卖，央及间壁王婆买了些酒肉，去武松房里，簇了一盆炭火。心里自想道：「我今日着实撩鬬他一鬬，不怕他不动情！」那妇人独自冷冷清清立在帘儿下，望见武松正在雪里，踏着那乱琼碎玉归来。妇人推起帘子，迎着笑道：「叔叔，寒冷？」武松道：「感谢嫂嫂罣心！」入将门来，便把毡笠儿除将下来，那妇人将手去接。武松道：「不劳嫂嫂生受！」自把雪来拂了，挂在壁子上。随即解了缠带，脱了身上鹦哥绿纻丝衲袄，入房内。那妇人便道：「奴等了一早晨，叔叔怎的不归来吃早饭？」武松道：「早间有一相识请我吃饭了，都纔又有一个作杯，我不耐烦，一直走到家来。」妇人道：「既恁的，请叔叔向火。」武松道：「正好。」便脱了油靴，换了一双袜子，穿了暖鞋，掇条凳子，自近火盆边坐的。那妇人早令迎儿把前门上了闩，后门也关了。都换些煮酒菜蔬入房里来，摆在桌子上。武松问道：「哥哥那里去了？」妇人道：「你哥哥每自出去做些买卖，我和叔叔自吃三杯。」武松道：「一发等哥来家吃也不迟。」妇人道：「那里等的他？」说由未了，只见迎儿小女早暖了一注酒来。武松道：「不必嫂嫂费心，待武二自斟。」妇人也掇一条凳子，近火边坐了。桌上摆着杯盘，妇人拏盏酒，擎在手里，看着武松：「叔叔满饮此杯！」武松接过酒去，一饮而尽。那妇人又筛一杯来，说道：「天气寒冷，叔叔饮个成双的盏儿。」武松道：「嫂嫂自饮。」接来又一饮而尽。武松都筛一杯酒，递与妇人，妇人接过酒来，呷了，都拏注子再斟酒，放在武松面前。那妇人一径将酥胸微露，云鬟半亸，脸上堆下笑来，说道：「我听得人说，叔叔在县前街上，养着个唱的，有这话么？」武松道：「嫂嫂休听的人胡说，我武二从来不是这等人！」妇人道：「我不信，只怕叔叔口头不是心头。」武松道：「嫂嫂不信时，只问哥哥就见了。」妇人道：「呵呀！你休说，他那里晓得甚么？如在醉生梦死一般！他若知道时，不卖炊饼了。叔叔且请一杯！」连筛了三四杯饮过。那妇人也有三杯酒落肚，烘动春心，那里按纳得住？欲心如火，只把闲话来说。武松也知了八、九分，自己只把头来低了，都不来兜揽。妇人起身去荡酒，武松自在房内，都拏火筯簇火。妇人良久暖了一注子酒来到房里，一只手拏着注子，一只手便去武松肩上只一捏，说道：「叔叔，只穿这些衣服，不寒冷么？」武松已有五七分不自在，也不理他。妇人见他不应，匹手便来夺火筯，口里道：「叔叔你不会簇火，我与你拨火。只要一似火盆来热，便好。」武松有八九分焦燥，只不做声。这妇人也不看武松焦燥，便丢下火筯，却筛一盏酒来，自呷了一口，剩下大半盏酒，看着武松道：「你若有心，吃我这半杯儿残酒。」乞武松匹手夺过来，泼在地下。说道：「嫂嫂，不要恁的不识羞耻！」把手只一推，争些儿把妇人推了一交。武松睁起眼来，说道：「武二是个顶天立地的噙齿戴发的男子汉，不是那等败坏风俗伤人伦的猪狗。嫂嫂休要这般不识羞耻，为此等的勾当！倘有些风吹草动，我武二眼里认的是嫂嫂，拳头都不认的是嫂嫂！再来休要如此所为。」妇人吃他几句，抢的通红了面皮，便叫迎儿收拾了碟盏家火。口里指着说道：「我自作耍子，不值得便当真起来！好不识人敬！」收了家火，自往厨下去了。有诗为证：
 
-    「泼言柔心太不良， 贪淫无耻坏纲常；
+    「泼贱柔心太不良， 贪淫无耻坏纲常；
     席间尚且求云雨， 反被都头骂一场。」
 
 这妇人见抅搭武松不动，反被他抢白了一场。武松自在房中气忿忿的，自己寻思。天色都早申牌时分，武大挑着担儿大雪里归来。推开门，放下担儿，进的房来，见妇人一双眼哭的红红的，便问道：「你和谁闹来？」妇人道：「都是你这不争气的，交外人来欺负我！」武大道：「谁敢来欺负你？」妇人道：「情知是谁！争奈武二那厮，我见他大雪里归来，好意安排些酒饭与他吃，他见前后没人，便把言语来调戏我。便是迎儿眼见，我不赖他！」武大道：「我兄弟不是这等人，从来老实！休要高声，乞邻舍听见笑话！」武大撇了妇人，便来武松房里。叫道：「二哥，你不曾吃点心，我和你吃些个。」武松只不做声。寻思了半晌，脱了丝鞋，依旧穿上油腊靴，着了上盖，戴上毡笠儿。一面系缠带，一面出大门。武大叫道：「二哥你那里去？」也不答，一直只顾去了。武大回到房内，问妇人道：「我叫他，又不应，只顾往县前那条路去了。正不知怎的了！」妇人骂道：「贼混沌虫，有甚么难见处！那厮羞了，没脸儿见你，走了出去。我猜他一定叫个人来搬行李，不要在这里住；都不道你留他。」武大道：「他搬了去，须乞别人笑话！」妇人骂道：「混沌魍魉！他来调戏我，到不乞别人笑话？你要便和他过去，我都做不的这样人。你与了我一纸休书，你自留他便了！」武大那里再敢开口，被这妇人倒数骂了一顿。正在家两口儿絮聒，只见武松引了个士兵，拿着条扁担，径来房内，收拾行李便出门。武大走出来，叫道：「二哥，做甚么便搬了去？」武松道：「哥哥不要问，说起来装你的幌子。只由我自去便了！」武大那里再敢问备细，由武松搬了出去。那妇人在里面喃喃吶吶骂道：「都也好！只道是亲难转债，人自知道。一个兄弟做了都头，怎的养活了哥嫂。都不知反来嚼咬人！正是花木瓜，空好看，搬了去，到谢天地，且得冤家离眼前。」武大见老婆这般言语，不知怎的了，心中只是放去不下。自从武松搬去县前客店宿歇，武大自依前上街卖炊饼，本待要去县前寻兄弟说话，都被这妇人千叮万嘱，分付交不要去兜揽他，因此武大不敢去寻武松。有诗为证：
