--- a/005.md
+++ b/005.md
@@ -1,10 +1,10 @@
 第五回：郓哥帮捉骂王婆 淫妇鸩杀武大郎（万历本）
 =====
 
-    「参透风流二字禅， 好姻缘是恶姻缘，
+    参透风流二字禅， 好姻缘是恶姻缘，
     痴心做处人人爱， 冷眼观时个个嫌；
     野草闲花休采折， 真姿劲质自安然，
-    山妻稚子家常饭， 不害相思不损钱。」
+    山妻稚子家常饭， 不害相思不损钱。
 
 话说当下郓哥被王婆子打了，心中正没出气处。提了雪梨篮儿，一径奔来街上寻武大郎。转了两条巷，只见武大挑着炊饼担儿，正从那条街过来。郓哥见了，立住了脚，看着武大道：「这几时不见你，吃得肥了。」武大歇下担儿道：「我只是这等模样，有甚么吃的肥处？」郓哥道：「我前日要籴些麦粉，一地里没籴处，人都道你屋里有。」武大道：「我屋里并不养鹅鸭，那里有这麦粉？」郓哥道：「你说没粉麦，怎的赚得你恁肥〈月答〉〈月答〉便软倒，提起你来也不防，煮你在锅里也没气。」武大道：「含鸟糊孙，倒骂得我好！我的老婆又不偷汉子，我如何是鸭？」郓哥道：「你老婆不偷汉子，只偷子汉！」武大扯住郓哥道：「还我主儿来！」郓哥道：「我笑你只会扯我，都不道咬下他左边的来。」武大道：「好兄弟！你对我说谁，我把十个炊饼送你。」郓哥道：「炊饼不济事，你只做个东道，我吃三杯，我说与你。」武大道：「你会吃酒？跟我来。」
 
