--- a/005.md
+++ b/005.md
@@ -12,26 +12,28 @@
 
 你便挑着担儿，只在左边等我。我先去惹那老狗，他必然来打我。我先把篮儿丢在街心来，你却抢入，我便一头顶住那婆子，你便奔入房里去，叫起屈来，此计如何？」武大道：「既是如此，却是亏了兄弟！我有数十贯钱，我把与你去，你可明日早早来紫石街巷口等我。」郓哥得了几贯钱并几个炊饼，自去了。武大还了酒钱，挑了担儿，自去买了一遭归去。原来那妇人往常时，只是骂武大，百般的欺负他；近日来也自知礼亏，只得窝盘他些个。当晚武大挑了担儿归来，也是和往日一般，并不题起别事。那妇人道：「大哥，买盏酒吃？」武大道：「却纔和一般经纪人，买了三盏吃了。」那妇人一心只想着西门庆，那里来理会武大的做多做少。当日武大挑了担儿，自出去做买卖。这妇人巴不得他出去了，便踅过王婆茶房里来等西门庆。且说武大挑着担儿，出到紫石街巷口，迎见郓哥提着篮儿在那里张望。武大道：「如何？」郓哥道：「还早些个，你自去卖一遭来，那厮七八也将来也。你只在左边处伺候，不可远去了。」武大云飞也似，去街上卖了一遭儿回来。郓哥道：「你只看我篮儿抛出来，你便飞奔入去。」武大自把担儿寄了，不在话下。有诗为证：
 
-「虎有俦兮鸟有媒， 暗中牵陷自狂为；
-
-郓哥指计西门庆， 亏杀王婆撮合奇。」
+    虎有俦兮鸟有媒， 暗中牵陷自狂为；
+    郓哥指计西门庆， 亏杀王婆撮合奇。
 
 且说郓哥提着篮儿，便走入茶坊里来，向王婆骂道：「老猪狗！你昨日为甚么便打我？」那婆子旧性不改。便跳起身来，喝道：「你这小猢狲！老娘与你无干，你如何又来骂我？」郓哥道：「便骂你这马伯六，做牵头的老狗肉，直我｛髟巳｝｛髟巴｝！」那婆子大怒，揪住郓哥便打。郓哥叫一声「你打」时，把那手中篮儿丢出当街上来。那婆子却待揪他，被这小猴子叫一声「你打」时，就打王
 
 婆腰里带个住，看着婆子小肚上，只一头撞将去，险些儿不跌倒，却得壁子碍住不倒，那猴子死命顶在壁上。只见武大从外裸起衣裳，大踏步直抢入茶坊里来。那婆子见是武大来得甚急，待要走去阻挡时，却被这小猴子死力顶住，那里肯放，婆子只叫得：「武大来也！」那妇人正和西门庆在房里，做手脚不迭，先奔来顶住了门。这西门庆便入床下去躲。武大抢到房门首，用手推那房门时，那里推得开，口里只叫：「做得好事！」那妇人顶着门，慌做一团。口里便说道：「你闲常时只好鸟嘴，卖弄杀好拳棒，临时便没些用儿！用了个纸虎儿，也吓一交！」那妇人这几句话，分明交西门庆来打武大，夺路走。西门庆在床底下听了妇人这些话，题醒他这个念头，便钻出来说道：「娘子，不是我没本事，一时间没这智量。」便来拔开拴，叫声：「不要来！」武大都待揪他。被西门庆早飞起脚来，武大矮短，正踢中心窝，拨地望后便倒了。一直走了。郓哥见头势不好，也撇了王婆，撒开跳了。那街坊邻舍，都知道西门庆了得，谁敢来管事。王婆当时就地下扶起武大来，见他口里吐血，面皮蜡楂也似黄了，便叫那妇人出来，舀碗水救得苏醒。两个上下肩挟着，便从后门扶归中楼上去，安排他床上睡了。当夜无话。次日，西门庆打听得没事，依前自来王婆家，和这妇人做一处，只指望武大自死。武大一病五日，不出勿起。更兼要汤不见，要水不见，每日叫那妇人又不应。只见他浓妆艳抹了出去，归来便脸红，小女迎儿又吃妇人禁住，不得向前，吓道：「小贱人！你不对我说，与了他水吃，都在你身上！」那迎儿见妇人这等说，又怎敢与武大一点汤水吃。武大几遍只是气得发昏，又没人来采问。一日，武大叫老婆过来，分付他道：「你做的勾当，我亲手又捉着你奸。你倒挑拨奸夫踢了我心，至今求生不生，求死不死，你们却自去快活；我死自不妨，和你们争执不得了。我兄弟武二，你须知他性格，倘或早晚归来，他肯干休！你若肯可怜我，早早扶得我好了，他归来时，我都不提起，你若不看顾我时，待他归来，却和你们说话！」这妇人听了，也不回音，却踅过王婆家来，一五一十都对王婆和西门庆说了。那西门庆听了这话，似提在冷水盆内一般，说道：「苦也！我须知景阳岗上打死大虫的武都头，他是清河县第一个好汉！我如今却和娘子眷恋日久，情孚意孚，拆散不开。据此等说时，正是怎生得好？却是苦也！」王婆冷笑道：「我倒不曾见你是个把舵的，我是个撑船的。我倒不慌，你倒慌了手脚！」西门庆道：「我往自做个男汉，到这般去处，却摆布不开！你有甚么主见，遮藏我们则个？」王婆道：「既要我遮藏你们，我有一条计，你们却要长做夫妻？要短做夫妻？」西门庆道：「干娘，你且说，如何是长做夫妻？短做夫妻？」王婆道：「若是短做夫妻，你每只就今日便分散。等武大将息好了起来，与他陪了话。武二归来，都没言语，待他再差使出来，却又来相会，这是短做夫妻。你们若要长做夫妻，每日同在一处，不躭惊受怕，我却有这条妙计，只是难教你们。」西门庆道：「干娘，周旋了我们则个，只要长做夫妻。」王婆道：「这条计，用着件东西，别人家里都没。天生天化，大官人家却有。」西门庆道：「便是要我的眼睛，也割来与你！却是甚么东西？」婆子道：「如今这捣子病得重，趁他狼狈好下手。大官人家里取些砒霜，却交大娘子自去赎一贴心疼的药来，却把这砒霜来下在里面，把这矮子结果了他命，一把火，烧得干干净净，没了踪迹。便是武二回来，他待怎的？自古道：『幼嫁从亲，再嫁由身。』小叔如何管得？暗地里来往，半年一载便好了。等待夫孝满日，大官人一顶轿子娶到家去。这个不是长远做夫妻？谐老同欢，此计如何？」西门庆道：「干娘此计甚妙。自古道：『欲求生快活，须下死工夫。』罢罢罢！一不做，二不休！」王婆道：「可知好哩！这是剪草除根，萌芽不发，若是剪草不除根，春来萌芽再发，却如何处置！大官人往家去快取此物来，我自教娘子下手，事了时，却要重重谢我。」西门庆道：「这个自然，不消你说。」有诗为证。诗曰：
 
-「云情雨意两绸缪， 恋色迷花不肯休；
-
-毕竟世间有此事， 武大身躯丧粉头。」
+    云情雨意两绸缪， 恋色迷花不肯休；
+    毕竟世间有此事， 武大身躯丧粉头。
 
 且说西门庆去不多时，包了一包砒霜，递与王婆收了。这婆子看着那妇人：「大娘子，我教你下药的法儿，如今武大不对你说，交你救活他？你便乖此机，把些小意儿贴恋他。他若问你讨药吃时，便把这砒霜调在这心疼药里，待他一觉身动，你便把药灌将下去，却便走了起身。他若毒气发时，必然肠胃迸断，大叫一声。你却把被一盖，都不要人听见，紧紧的按住被角。预先烧下一锅汤，煮着一条抹布，他若毒发之时，七窍内流血，口唇上有牙齿咬的痕迹，他若气断了，你便揭起被来，却将煮的抹布只一揩，都揩没了血迹，便入在村里，扛出去烧了，有么了事！」那妇人道：「好却是好，只是奴家临时手软，安排不得尸首。」婆子道：「这个易得！你那边只敲壁子，我自就过来帮扶你。」西门庆道：「你们用心处理，明日五更，我来讨话。」说罢，自归家去了。王婆把这砒霜用手捻为细末，递与妇人，将去藏了。那妇人回到楼上，看着武大，一丝没了两气，看看待死，那妇人坐在床边假哭。武大：「你做甚么来哭？」妇人拭着眼泪道：「我的一时间不是，乞那西门庆駶骗了。谁想脚踢中了你心！我问得一处有好药，我要去赎来医你，只怕你疑忌，不敢去取。」武大道：「你救得我活无事了，一笔都勾，并不记怀。武二来家，亦不题起。你快去赎药来救我则个！」那妇人拏了铜钱，径来王婆家里坐地，却交王婆赎得药来，把到楼上，交武大看了，说道：「这贴心疼药，太医交你半夜里吃，吃了倒头一睡，把一两床被，发些汗，明日便起得来。」武大道：「却是好也！生受大嫂，今夜醒睡些，半夜里调来我吃。」那妇人道：「你放心睡，我自扶持你。」看看天色将黑了，妇人在房里点上灯，下面烧了大锅汤，拏了一方抹布，煮在锅里。听那更鼓时，却好正打三更。那妇人先把砒霜倾在盏内，却舀一碗白汤来，把到楼上，却叫：「大哥，药在那里？」武大道：「在我席子底下，枕头边，你快调来与我吃！」那妇人揭起席，将那药抖在盏子里，把那药帖安了，将白汤冲在盏里，把头上银簪儿只一搅，调得匀了，左手扶起武大，右手把药来灌。武大呷了一口，说道：「大嫂，这药好难吃！」妇人道：「只要他医治病好，管甚么难吃易吃！」武大再呷第二口时，被这婆娘就势只一灌，一盏药都灌下喉咙去了。那妇人便放倒武大，慌忙跳下床来。武大哎了一声，说道：「大嫂，吃下这药去，肚里倒疼起来。苦呀！苦呀！倒当不得了！」这妇人便去脚后扯过两床被来，没头没脸只顾盖，武大叫道：「我也气闷！」那妇人道：「太医分付，教我与你发些汗，便好得快！」武大要再说时，这妇人怕他挣扎，便跳上床来，骑在武大身上，把手紧紧地按住被角，那里肯放些松宽。正似：
 
-「油煎肺腑，火燎肝肠。心窝里如雪刃相侵，满腹中似钢刀乱搅。浑身冰冷，七窍血流。牙关紧咬，三魂赴枉死城中；喉管枯干，七魄投望乡台上。地狱新添食毒鬼，阳间没了捉奸人！」
+    油煎肺腑，火燎肝肠。
+    心窝里如雪刃相侵，满腹中似钢刀乱搅。
+    浑身冰冷，七窍血流。
+    牙关紧咬，三魂赴枉死城中；
+    喉管枯干，七魄投望乡台上。
+    地狱新添食毒鬼，阳间没了捉奸人！
 
 那武大当时哎了两声，喘息了一回，肠胃迸断，呜呼哀哉！身体动不得了！那妇人揭起被来，见了武大咬牙切齿，七窍流血，怕将起来。只得跳下床来，敲那壁子。王婆听得，走过后门头咳嗽。那妇人便下楼来开了后门。王婆问道：「了也未？」那妇人道：「了便了了，只是我手脚软了，安排不得！」王婆道：「有甚么难处？我帮你便了！」那婆子便把衣袖卷起，舀了一桶汤，把抹布撇在里面，掇上楼来。卷过了被，先把武大嘴边唇上都抹了，却把七窍淤血痕迹拭净，便把衣裳盖在身上。两个从楼上一步一掇，扛将下来，就楼下将扇旧门停了。与他梳了头，戴上巾帻，穿了衣裳，取双鞋袜与他穿了，将片白绢盖了脸，拣床干净被盖在死尸身上。却上楼来，收拾得干净了，王婆自转将归去了。那婆娘却号号地假哭起养家人来。看官听说；原来但凡世上妇人，哭有三样：有泪有声谓之哭，有泪无声谓之泣，无泪有声谓之号。当下那妇人干嚎了半夜。次早五更，天色未晓，西门庆奔走讨信，王婆说了备细。西门庆取银子把与王婆，教买棺材津送，就叫那妇人商议。这婆娘过来和西门庆说道：「我的武大今日已死，我只靠着你做主，大官人休是网巾圈儿打靠后。」西门庆道：「这个何须你说费心！」妇人道：「你若负了心，怎的说？」西门庆道：「我若负了心，就是你武大一般！」王婆道：「大官人且休闲说！如今只有一件事要紧地方，天明就要入殓，只怕被忤作看出破绽来怎了！团头何九，他也是个精细的人，只怕他不肯殓。」西门庆笑道：「这个不妨事，何九我自分付他，他不敢违我的言语。」王婆道：「大官人快去分付他，不可迟了。」西门庆把银子交付与王婆买棺材，他便自去对何九说去了。正是：
 
-「三光有影遗谁概， 万事无根只自生！
-
-雪隐鹭飞始见， 柳藏鹦鹉语方知。」
+三光有影遗谁概， 万事无根只自生！
+雪隐鹭飞始见， 柳藏鹦鹉语方知。
 
 毕竟西门庆怎的对何九说？要知后项如何，且听下回分解：
