第五回：郓哥帮捉骂王婆 淫妇鸩杀武大郎（万历本）

--- a/003.md
+++ b/003.md
@@ -1,12 +1,9 @@
 第三回：王婆定十件挨光计 西门庆茶房戏金莲（万历本）
 
-「色不迷人人自迷， 迷他端的受他亏，
-
-精神耗散容颜浅， 骨髓焦枯气力微；
-
-犯着奸情家易散， 染成色病药难医，
-
-古来饱暖生闲事， 祸到头来总不知。」
+    色不迷人人自迷， 迷他端的受他亏，
+    精神耗散容颜浅， 骨髓焦枯气力微；
+    犯着奸情家易散， 染成色病药难医，
+    古来饱暖生闲事， 祸到头来总不知。
 
 话说西门庆央王婆，一心要会那雌儿一面，便道：「干娘，你端的与我说这件事成，我便送十两银子与你。」王婆道：「大官人，你听我说，但凡挨光的两个字最难。怎的是挨光？似如今俗呼偷情就是了。要五件事俱全，方纔行的。第一要潘安的貌，第二要驴大行货，第三要邓通般有钱，第四要青春小少，就要绵里针一般软款忍耐，第五要闲工夫。此五件唤做『潘、驴、邓、小、闲』都全了，此事便获得着。」西门庆道：「实不瞒你说，这五件事我都。有第一件，我的貌虽比不得潘安，也充得过。第二件，我小时在三街两巷游串，也曾养得好大龟。第三，我家里也有几贯钱财，虽不及邓通，也颇得过日子。第四，我最忍耐，他便就打我四百顿，休想我回他一拳。第五，我最有闲工夫。不然，如何来得恁勤？干娘，你自作成完备了时，我自重重谢你！」西门庆当日，意已在言表。王婆道：「大官人，你说伍件事多全。我知道还有一件事打搅，也多是成不得！」西门庆道：「且说甚么一件事打搅？」王婆道：「大官人，休怪老身直言。但凡挨光最难十分，肯使钱到九分九厘，也有难成处。我知你从来悭吝，不肯胡乱便使钱，只这件打扰。」西门庆道：「这个容易，我只听你言语便了。」王婆道：「若大官人肯使钱时，老身有一条妙计，须交大官人和这雌儿会一面。只不知大官人肯依我么？」西门庆道：「不拣怎的，我都依你。端的有甚妙计？」王婆笑道：「今日晚了，且回去，过半年三个月来商量。」西门庆央及道：「干娘，你休撤科。自作成我则个，恩有重报！」王婆笑哈哈道：「大官人都又慌了！老身这条计，虽然入不得武成王庙，端的强似孙武子教女兵，十捉八九着，大官人占用。今日实对你说了罢，这个雌儿来历，虽然微未出身，都倒百伶百俐，会一手好弹唱。针指女工，百家奇曲，双陆家棋，无般不知。小名叫做金莲，娘家姓潘。原是南关外潘裁的女儿，卖在张大户家学弹唱。后因大户年老，打发出来。不要武大一文钱，白白与了他为妻。这几年武大为人软弱，每日早出晚归，只做买卖。这雌儿等闲不出来，老身无事，常过去与他闲坐，他有事亦来请我理会，他也叫我做干娘。武大这两日出门早，大官人如干此事，便买一疋蓝紬，一疋白紬，一疋白绢，再用十两好绵，都把来与老身。老身都走过去，问他借历日，央及人拣个好日期，叫个裁缝来做。他若见我这般来说，拣了日期，不肯与我来做时，此事便休了。他若欢天喜地。说我替你做，不要我叫裁缝，这光便有一分了。我便请得他来做，就替我裁，这便二分了。他若来做时，午间我都安排些酒食点心，请他吃。他若说不便当，定要将去家中做，此事便休了。他不言语吃了时，这光便有三分了。这一日你也莫来。直到第三日晌午前后，你整整齐齐打扮了来，以咳嗽为号。你在买前叫道：『怎的连日不见王干娘？我来买盏茶吃。』我便出来请你入房里坐，吃茶。他若见你，便起身来走了归去，难道我扯住他不成？此事便休了。他若见你入来，不动身时，这光便有四分了。坐下时，我便对雌儿说道：『这个便是与我衣施主的官人，亏杀他！』我便夸大官人许多好处，你便卖弄他针指，若是他不来兜揽答应时，此事便休了。他若口里答应，与你说话时，这光便有五分。我都『难为这位娘子，与我作成出手做，亏杀你两施主，一个出钱，一个出力。不是老身路岐相央，难得这位娘子在这里，官人做个主人，替娘子浇浇手。』你便取银子出来，央我买，若是他便走时，不成我扯住他？此事便休了。若是不动身时，事务易成，这光便有六分了。我都拏银子临出门时，对他说：『有劳娘子相待官人坐一坐。』他若起身走了家去，我难道阻挡他？此事便休了。若是他不起身，又好了，这光便有七分了。待我买得东西，提在桌子上，便说：『娘子，且收拾过生活去，且吃一杯儿酒，难得这官人坏钱。』他不肯和你同桌吃，丢了回去了，此事便休了。若是只口里说要去，都不动身，此事又好了，这光便有八分了。待他吃得酒浓时，正说得入港，我便推道没了酒，再交你买；你便拏银子，又央我买酒去，并果子来配酒。我把门拽上，关你和他两个在屋里。若焦躁跑了归去时，此事便休了。他若由我拽上门，不焦躁时，这光便有九分，只欠一分便完。就这一分倒难。大官人，你在房里，便着几句甜话儿，说入去。都不可燥爆，便去动手动脚，打搅了事，那时我不管你；你先把袖子向桌子上拂落一双筋下去，只推拾筯，将手去他脚上捏一捏。他若闹将起来，我自来搭救，此事便收了，再也难成。若是他不做声时，此事十分光了，他必然有意。这十分做完备，你怎的谢我？」西门庆听了大喜道：「虽然上不得凌烟阁，干娘，你这条计，端的绝品好妙计！」王婆道：「都不要忘了，许我那十两银子。」西门庆道：「便得一片橘皮吃，切莫忘了洞庭河；这条计，干娘，几时可行？」王婆道：「亦只今晚来有回报。我如今趁武大未归，过去问他借历日，细细说念他；你快使人送将紬绢绵子来，休要迟了！」西门庆道：「干娘若完成得这件事，如何敢失信？」于是作别了王婆，离了茶肆，就去街上买了紬绢三疋，并十两银子，清水好绵，家里叫了个贴身答应的小厮，名唤玳安，用包袱包了，一直送入王婆家来。王婆欢喜收下，打发小厮回去。正是：
 
