--- a/005.md
+++ b/005.md
@@ -6,16 +6,16 @@
     野草闲花休采折， 真姿劲质自安然，
     山妻稚子家常饭， 不害相思不损钱。
 
-话说当下郓哥被王婆子打了，心中正没出气处。提了雪梨篮儿，一径奔来街上寻武大郎。转了两条巷，只见武大挑着炊饼担儿，正从那条街过来。郓哥见了，立住了脚，看着武大道：「这几时不见你，吃得肥了。」武大歇下担儿道：「我只是这等模样，有甚么吃的肥处？」郓哥道：「我前日要籴些麦粉，一地里没籴处，人都道你屋里有。」武大道：「我屋里并不养鹅鸭，那里有这麦粉？」郓哥道：「你说没粉麦，怎的赚得你恁肥〈月答〉〈月答〉便软倒，提起你来也不防，煮你在锅里也没气。」武大道：「含鸟糊孙，倒骂得我好！我的老婆又不偷汉子，我如何是鸭？」郓哥道：「你老婆不偷汉子，只偷子汉！」武大扯住郓哥道：「还我主儿来！」郓哥道：「我笑你只会扯我，都不道咬下他左边的来。」武大道：「好兄弟！你对我说谁，我把十个炊饼送你。」郓哥道：「炊饼不济事，你只做个东道，我吃三杯，我说与你。」武大道：「你会吃酒？跟我来。」
+话说当下郓哥被王婆子打了，心中正没出气处。提了雪梨篮儿，一径奔来街上寻武大郎。转了两条巷，只见武大挑着炊饼担儿，正从那条街过来。郓哥见了，立住了脚，看着武大道：「这几时不见你，吃得肥了。」武大歇下担儿道：「我只是这等模样，有甚么吃的肥处？」郓哥道：「我前日要[籴]些麦粉，一[地里]没籴处，人都道你屋里有。」武大道：「我屋里并不养鹅鸭，那里有这麦粉？」郓哥道：「你说没粉麦，怎的赚得你恁肥〈月答〉〈月答〉便软倒，提起你来也不防，煮你在锅里也没气。」武大道：「含鸟糊孙，倒骂得我好！我的老婆又不偷汉子，我如何是[鸭]？」郓哥道：「你老婆不偷汉子，只偷子汉！」武大扯住郓哥道：「还我主儿来！」郓哥道：「我笑你只会扯我，都不道咬下他[左边的]来。」武大道：「好兄弟！你对我说谁，我把十个炊饼送你。」郓哥道：「炊饼不济事，你只做个东道，我吃三杯，我说与你。」武大道：「你会吃酒？跟我来。」
 
-武大挑了担儿，引着郓哥到个小酒店里，歇下担儿，拏几个炊饼，买了些肉，讨了一旋酒，请郓哥吃了。那小厮道：「酒不要添，肉再切几块来。」武大道：「好兄弟，且说与我则个！」郓哥道：「且不要慌，等我一发吃了，却说与你。你却不要气苦，我自帮你打捉。」武大看那猴子吃了酒肉：「你如今却说与我！」郓哥道：「你要得知，把手来摸我头上的疙瘩。」武大道：「却怎的来有这疙瘩？」「对你说，我今日将这篮雪梨去寻西门大官，挂一小勾子，一地里没寻处。街上有人道：他在王婆茶坊里来，和武大娘子勾搭上了，每日只在那里行走。我指望见了他，撰得三五十文钱使。叵耐王婆那老猪狗，不放我去。房里寻他，大粟暴打出我来。我特地来寻你，我方纔把两包话来激你，我不激你时，你须不求问我。」武大道：「真个有这等事？」郓哥道：「又来了，我道你是这般屁鸟人！那厮两个落得快活，只专等你出来，便在王婆房里做一处，你问道真个也是假？莫不我哄你不成！」武大听罢，道：「兄弟，我实不瞒你说，我这婆娘每日去王婆家里做衣服，做鞋脚，归来便脸红。我先妻丢下个女孩儿，要便朝打暮骂，不与饭吃，这两日有些精神错乱，见了我不做喜欢，我自也有些疑忌在心里，这话正是了。我如今寄了担儿，便去捉奸如何？」郓哥道：「你老大一条汉，元来没些见识！那王婆老狗，什么利害怕人！你如何出得他手？他三人也有个暗号儿。见你入来拏他，他把你老婆藏过了，那西门庆须了得！打你这般二十个。若捉他不着，反而吃他一顿好拳头！他又有钱有势，反告你一状子，你须吃他一场官司，又没人做主，干结果了你性命！」武大道：「兄弟，你都说得是。我却怎的出得这口气？」郓哥道：「我吃那王婆打了，也没出气处。我教一着，今日归去，都不要发作，也不要说，自只做每日一般。明朝便少做些炊饼出来卖，我自在巷口等你。若是见西门庆入去时，我便来叫你。
+武大挑了担儿，引着郓哥到个小酒店里，歇下担儿，拏几个炊饼，买了些肉，讨了一旋酒，请郓哥吃了。那小厮道：「酒不要添，肉再切几块来。」武大道：「好兄弟，且说与我则个！」郓哥道：「且不要慌，等我一发吃了，却说与你。你却不要气苦，我自帮你打捉。」武大看那猴子吃了酒肉：「你如今却说与我！」郓哥道：「你要得知，把手来摸我头上的疙瘩。」武大道：「却怎的来有这疙瘩？」「对你说，我今日将这篮雪梨去寻西门大官，挂一小勾子，一地里没寻处。街上有人道：他在王婆茶坊里来，和武大娘子勾搭上了，每日只在那里行走。我指望见了他，撰得三五十文钱使。叵耐王婆那老猪狗，不放我去。房里寻他，大粟暴打出我来。我特地来寻你，我方纔把两包话来激你，我不激你时，你须不求问我。」武大道：「真个有这等事？」郓哥道：「又来了，我道你是这般屁鸟人！那厮两个落得快活，只专等你出来，便在王婆房里做一处，你问道真个也是假？莫不我哄你不成！」武大听罢，道：「兄弟，我实不瞒你说，我这婆娘每日去王婆家里做衣服，做[鞋脚]，归来便脸红。我[先妻丢下个女孩儿]，[要便]朝打暮骂，不与饭吃，这两日有些精神错乱，见了我不做喜欢，我自也有些疑忌在心里，这话正是了。我如今寄了担儿，便去捉奸如何？」郓哥道：「你老大一条汉，元来没些见识！那王婆老狗，什么利害怕人！你如何出得他手？他三人也有个暗号儿。见你入来拏他，他把你老婆藏过了，那西门庆须了得！打你这般二十个。若捉他不着，反而吃他一顿好拳头！他又有钱有势，反告你一状子，你须吃他一场官司，又没人做主，干结果了你性命！」武大道：「兄弟，你都说得是。我却怎的出得这口气？」郓哥道：「我吃那王婆打了，也没出气处。我教一着，今日归去，都不要发作，也不要说，自只做每日一般。明朝便少做些炊饼出来卖，我自在巷口等你。若是见西门庆入去时，我便来叫你。
 
-你便挑着担儿，只在左边等我。我先去惹那老狗，他必然来打我。我先把篮儿丢在街心来，你却抢入，我便一头顶住那婆子，你便奔入房里去，叫起屈来，此计如何？」武大道：「既是如此，却是亏了兄弟！我有数十贯钱，我把与你去，你可明日早早来紫石街巷口等我。」郓哥得了几贯钱并几个炊饼，自去了。武大还了酒钱，挑了担儿，自去买了一遭归去。原来那妇人往常时，只是骂武大，百般的欺负他；近日来也自知礼亏，只得窝盘他些个。当晚武大挑了担儿归来，也是和往日一般，并不题起别事。那妇人道：「大哥，买盏酒吃？」武大道：「却纔和一般经纪人，买了三盏吃了。」那妇人一心只想着西门庆，那里来理会武大的做多做少。当日武大挑了担儿，自出去做买卖。这妇人巴不得他出去了，便踅过王婆茶房里来等西门庆。且说武大挑着担儿，出到紫石街巷口，迎见郓哥提着篮儿在那里张望。武大道：「如何？」郓哥道：「还早些个，你自去卖一遭来，那厮七八也将来也。你只在左边处伺候，不可远去了。」武大云飞也似，去街上卖了一遭儿回来。郓哥道：「你只看我篮儿抛出来，你便飞奔入去。」武大自把担儿寄了，不在话下。有诗为证：
+你便挑着担儿，只在左边等我。我先去惹那老狗，他必然来打我。我先把篮儿丢在街心来，你却抢入，我便一头顶住那婆子，你便奔入房里去，叫起屈来，此计如何？」武大道：「既是如此，却是亏了兄弟！我有数十贯钱，我把与你去，你可明日早早来紫石街巷口等我。」郓哥得了几贯钱并几个炊饼，自去了。武大还了酒钱，挑了担儿，自去买了一遭归去。原来那妇人往常时，只是骂武大，百般的欺负他；近日来也自知礼亏，只得[窝盘]他些个。当晚武大挑了担儿归来，也是和往日一般，并不题起别事。那妇人道：「大哥，买盏酒吃？」武大道：「却纔和一般经纪人，买了三盏吃了。」那妇人一心只想着西门庆，那里来理会武大的做多做少。当日武大挑了担儿，自出去做买卖。这妇人巴不得他出去了，便踅过王婆茶房里来等西门庆。且说武大挑着担儿，出到紫石街巷口，迎见郓哥提着篮儿在那里张望。武大道：「如何？」郓哥道：「还早些个，你自去卖一遭来，那厮七八也将来也。你只在左边处伺候，不可远去了。」武大云飞也似，去街上卖了一遭儿回来。郓哥道：「你只看我篮儿抛出来，你便飞奔入去。」武大自把担儿寄了，不在话下。有诗为证：
 
     虎有俦兮鸟有媒， 暗中牵陷自狂为；
     郓哥指计西门庆， 亏杀王婆撮合奇。
 
-且说郓哥提着篮儿，便走入茶坊里来，向王婆骂道：「老猪狗！你昨日为甚么便打我？」那婆子旧性不改。便跳起身来，喝道：「你这小猢狲！老娘与你无干，你如何又来骂我？」郓哥道：「便骂你这马伯六，做牵头的老狗肉，直我｛髟巳｝｛髟巴｝！」那婆子大怒，揪住郓哥便打。郓哥叫一声「你打」时，把那手中篮儿丢出当街上来。那婆子却待揪他，被这小猴子叫一声「你打」时，就打王婆腰里带个住，看着婆子小肚上，只一头撞将去，险些儿不跌倒，却得壁子碍住不倒，那猴子死命顶在壁上。只见武大从外裸起衣裳，大踏步直抢入茶坊里来。那婆子见是武大来得甚急，待要走去阻挡时，却被这小猴子死力顶住，那里肯放，婆子只叫得：「武大来也！」那妇人正和西门庆在房里，做手脚不迭，先奔来顶住了门。这西门庆便入床下去躲。武大抢到房门首，用手推那房门时，那里推得开，口里只叫：「做得好事！」那妇人顶着门，慌做一团。口里便说道：「你闲常时只好鸟嘴，卖弄杀好拳棒，临时便没些用儿！用了个纸虎儿，也吓一交！」那妇人这几句话，分明交西门庆来打武大，夺路走。西门庆在床底下听了妇人这些话，题醒他这个念头，便钻出来说道：「娘子，不是我没本事，一时间没这智量。」便来拔开拴，叫声：「不要来！」武大都待揪他。被西门庆早飞起脚来，武大矮短，正踢中心窝，拨地望后便倒了。一直走了。郓哥见头势不好，也撇了王婆，撒开跳了。那街坊邻舍，都知道西门庆了得，谁敢来管事。王婆当时就地下扶起武大来，见他口里吐血，面皮蜡楂也似黄了，便叫那妇人出来，舀碗水救得苏醒。两个上下肩挟着，便从后门扶归中楼上去，安排他床上睡了。当夜无话。次日，西门庆打听得没事，依前自来王婆家，和这妇人做一处，只指望武大自死。武大一病五日，不出勿起。更兼要汤不见，要水不见，每日叫那妇人又不应。只见他浓妆艳抹了出去，归来便脸红，小女迎儿又吃妇人禁住，不得向前，吓道：「小贱人！你不对我说，与了他水吃，都在你身上！」那迎儿见妇人这等说，又怎敢与武大一点汤水吃。武大几遍只是气得发昏，又没人来采问。一日，武大叫老婆过来，分付他道：「你做的勾当，我亲手又捉着你奸。你倒挑拨奸夫踢了我心，至今求生不生，求死不死，你们却自去快活；我死自不妨，和你们争执不得了。我兄弟武二，你须知他性格，倘或早晚归来，他肯干休！你若肯可怜我，早早扶得我好了，他归来时，我都不提起，你若不看顾我时，待他归来，却和你们说话！」这妇人听了，也不回音，却踅过王婆家来，一五一十都对王婆和西门庆说了。那西门庆听了这话，似提在冷水盆内一般，说道：「苦也！我须知景阳岗上打死大虫的武都头，他是清河县第一个好汉！我如今却和娘子眷恋日久，情孚意孚，拆散不开。据此等说时，正是怎生得好？却是苦也！」王婆冷笑道：「我倒不曾见你是个把舵的，我是个撑船的。我倒不慌，你倒慌了手脚！」西门庆道：「我往自做个男汉，到这般去处，却摆布不开！你有甚么主见，遮藏我们则个？」王婆道：「既要我遮藏你们，我有一条计，你们却要长做夫妻？要短做夫妻？」西门庆道：「干娘，你且说，如何是长做夫妻？短做夫妻？」王婆道：「若是短做夫妻，你每只就今日便分散。等武大将息好了起来，与他陪了话。武二归来，都没言语，待他再差使出来，却又来相会，这是短做夫妻。你们若要长做夫妻，每日同在一处，不躭惊受怕，我却有这条妙计，只是难教你们。」西门庆道：「干娘，周旋了我们则个，只要长做夫妻。」王婆道：「这条计，用着件东西，别人家里都没。天生天化，大官人家却有。」西门庆道：「便是要我的眼睛，也割来与你！却是甚么东西？」婆子道：「如今这捣子病得重，趁他狼狈好下手。大官人家里取些砒霜，却交大娘子自去赎一贴心疼的药来，却把这砒霜来下在里面，把这矮子结果了他命，一把火，烧得干干净净，没了踪迹。便是武二回来，他待怎的？自古道：『幼嫁从亲，再嫁由身。』小叔如何管得？暗地里来往，半年一载便好了。等待夫孝满日，大官人一顶轿子娶到家去。这个不是长远做夫妻？谐老同欢，此计如何？」西门庆道：「干娘此计甚妙。自古道：『欲求生快活，须下死工夫。』罢罢罢！一不做，二不休！」王婆道：「可知好哩！这是剪草除根，萌芽不发，若是剪草不除根，春来萌芽再发，却如何处置！大官人往家去快取此物来，我自教娘子下手，事了时，却要重重谢我。」西门庆道：「这个自然，不消你说。」有诗为证。诗曰：
+且说郓哥提着篮儿，便走入茶坊里来，向王婆骂道：「老猪狗！你昨日为甚么便打我？」那婆子旧性不改。便跳起身来，喝道：「你这小猢狲！老娘与你无干，你如何又来骂我？」郓哥道：「便骂你这马伯六，做牵头的老狗肉，直我[𩫻䯲]！」那婆子大怒，揪住郓哥便打。郓哥叫一声「你打」时，把那手中篮儿丢出当街上来。那婆子却待揪他，被这小猴子叫一声「你打」时，就打王婆腰里带个住，看着婆子小肚上，只一头撞将去，险些儿不跌倒，却得壁子碍住不倒，那猴子死命顶在壁上。只见武大从外裸起衣裳，大踏步直抢入茶坊里来。那婆子见是武大来得甚急，待要走去阻挡时，却被这小猴子死力顶住，那里肯放，婆子只叫得：「武大来也！」那妇人正和西门庆在房里，做手脚不迭，先奔来顶住了门。这西门庆便入床下去躲。武大抢到房门首，用手推那房门时，那里推得开，口里只叫：「做得好事！」那妇人顶着门，慌做一团。口里便说道：「你闲常时只好鸟嘴，卖弄杀好拳棒，临时便没些用儿！用了个纸虎儿，也吓一交！」那妇人这几句话，分明交西门庆来打武大，夺路走。西门庆在床底下听了妇人这些话，题醒他这个念头，便钻出来说道：「娘子，不是我没本事，一时间没这智量。」便来拔开拴，叫声：「不要来！」武大都待揪他。被西门庆早飞起脚来，武大矮短，正踢中心窝，拨地望后便倒了。一直走了。郓哥见头势不好，也撇了王婆，撒开跳了。那街坊邻舍，都知道西门庆了得，谁敢来管事。王婆当时就地下扶起武大来，见他口里吐血，面皮蜡楂也似黄了，便叫那妇人出来，舀碗水救得苏醒。两个上下肩挟着，便从后门扶归中楼上去，安排他床上睡了。当夜无话。次日，西门庆打听得没事，依前自来王婆家，和这妇人做一处，只指望武大自死。武大一病五日，不出勿起。更兼要汤不见，要水不见，每日叫那妇人又不应。只见他浓妆艳抹了出去，归来便脸红，小女迎儿又吃妇人禁住，不得向前，吓道：「小贱人！你不对我说，与了他水吃，都在你身上！」那迎儿见妇人这等说，又怎敢与武大一点汤水吃。武大几遍只是气得发昏，又没人来采问。一日，武大叫老婆过来，分付他道：「你做的勾当，我亲手又捉着你奸。你倒挑拨奸夫踢了我心，至今求生不生，求死不死，你们却自去快活；我死自不妨，和你们争执不得了。我兄弟武二，你须知他性格，倘或[早晚]归来，他肯干休！你若肯可怜我，早早扶得我好了，他归来时，我都不提起，你若不看顾我时，待他归来，却和你们说话！」这妇人听了，也不回音，却踅过王婆家来，一五一十都对王婆和西门庆说了。那西门庆听了这话，似提在冷水盆内一般，说道：「苦也！我须知景阳岗上打死大虫的武都头，他是清河县第一个好汉！我如今却和娘子眷恋日久，情孚意孚，拆散不开。据此等说时，正是怎生得好？却是苦也！」王婆冷笑道：「我倒不曾见你是个把舵的，我是个撑船的。我倒不慌，你倒慌了手脚！」西门庆道：「我往自做个男汉，到这般去处，却摆布不开！你有甚么主见，遮藏我们则个？」王婆道：「既要我遮藏你们，我有一条计，你们却要长做夫妻？要短做夫妻？」西门庆道：「干娘，你且说，如何是长做夫妻？短做夫妻？」王婆道：「若是短做夫妻，你每只就今日便分散。等武大将息好了起来，与他陪了话。武二归来，都没言语，待他再差使出来，却又来相会，这是短做夫妻。你们若要长做夫妻，每日同在一处，不躭惊受怕，我却有这条妙计，只是难教你们。」西门庆道：「干娘，周旋了我们则个，只要长做夫妻。」王婆道：「这条计，用着件东西，别人家里都没。[天生天化]，大官人家却有。」西门庆道：「便是要我的眼睛，也割来与你！却是甚么东西？」婆子道：「如今这[捣子]病得重，趁他狼狈好下手。大官人家里取些砒霜，却交大娘子自去赎一贴心疼的药来，却把这砒霜来下在里面，把这矮子结果了他命，一把火，烧得干干净净，没了踪迹。便是武二回来，他待怎的？自古道：『幼嫁从亲，再嫁由身。』小叔如何管得？暗地里来往，半年一载便好了。等待夫孝满日，大官人一顶轿子娶到家去。这个不是长远做夫妻？谐老同欢，此计如何？」西门庆道：「干娘此计甚妙。自古道：『欲求生快活，须下死工夫。』罢罢罢！一不做，二不休！」王婆道：「可知好哩！这是剪草除根，萌芽不发，若是剪草不除根，春来萌芽再发，却如何处置！大官人往家去快取此物来，我自教娘子下手，事了时，却要重重谢我。」西门庆道：「这个自然，不消你说。」有诗为证。诗曰：
 
     云情雨意两绸缪， 恋色迷花不肯休；
     毕竟世间有此事， 武大身躯丧粉头。
@@ -29,9 +29,29 @@
     喉管枯干，七魄投望乡台上。
     地狱新添食毒鬼，阳间没了捉奸人！
 
-那武大当时哎了两声，喘息了一回，肠胃迸断，呜呼哀哉！身体动不得了！那妇人揭起被来，见了武大咬牙切齿，七窍流血，怕将起来。只得跳下床来，敲那壁子。王婆听得，走过后门头咳嗽。那妇人便下楼来开了后门。王婆问道：「了也未？」那妇人道：「了便了了，只是我手脚软了，安排不得！」王婆道：「有甚么难处？我帮你便了！」那婆子便把衣袖卷起，舀了一桶汤，把抹布撇在里面，掇上楼来。卷过了被，先把武大嘴边唇上都抹了，却把七窍淤血痕迹拭净，便把衣裳盖在身上。两个从楼上一步一掇，扛将下来，就楼下将扇旧门停了。与他梳了头，戴上巾帻，穿了衣裳，取双鞋袜与他穿了，将片白绢盖了脸，拣床干净被盖在死尸身上。却上楼来，收拾得干净了，王婆自转将归去了。那婆娘却号号地假哭起养家人来。看官听说；原来但凡世上妇人，哭有三样：有泪有声谓之哭，有泪无声谓之泣，无泪有声谓之号。当下那妇人干嚎了半夜。次早五更，天色未晓，西门庆奔走讨信，王婆说了备细。西门庆取银子把与王婆，教买棺材津送，就叫那妇人商议。这婆娘过来和西门庆说道：「我的武大今日已死，我只靠着你做主，大官人休是网巾圈儿打靠后。」西门庆道：「这个何须你说费心！」妇人道：「你若负了心，怎的说？」西门庆道：「我若负了心，就是你武大一般！」王婆道：「大官人且休闲说！如今只有一件事要紧地方，天明就要入殓，只怕被忤作看出破绽来怎了！团头何九，他也是个精细的人，只怕他不肯殓。」西门庆笑道：「这个不妨事，何九我自分付他，他不敢违我的言语。」王婆道：「大官人快去分付他，不可迟了。」西门庆把银子交付与王婆买棺材，他便自去对何九说去了。正是：
+那武大当时哎了两声，喘息了一回，肠胃迸断，呜呼哀哉！身体动不得了！那妇人揭起被来，见了武大咬牙切齿，七窍流血，怕将起来。只得跳下床来，敲那壁子。王婆听得，走过后门头咳嗽。那妇人便下楼来开了后门。王婆问道：「了也未？」那妇人道：「了便了了，只是我手脚软了，安排不得！」王婆道：「有甚么难处？我帮你便了！」那婆子便把衣袖卷起，舀了一桶汤，把抹布撇在里面，掇上楼来。卷过了被，先把武大嘴边唇上都抹了，却把七窍淤血痕迹拭净，便把衣裳盖在身上。两个从楼上一步一掇，扛将下来，就楼下将扇旧门停了。与他梳了头，戴上巾帻，穿了衣裳，取双鞋袜与他穿了，将片白绢盖了脸，拣床干净被盖在死尸身上。却上楼来，收拾得干净了，王婆自转将归去了。那婆娘却号号地假哭起养家人来。看官听说；原来但凡世上妇人，哭有三样：有泪有声谓之哭，有泪无声谓之泣，无泪有声谓之号。当下那妇人干嚎了半夜。次早五更，天色未晓，西门庆奔走讨信，王婆说了备细。西门庆取银子把与王婆，教买棺材[津送]，就叫那妇人商议。这婆娘过来和西门庆说道：「我的武大今日已死，我只靠着你做主，大官人休是[网巾圈儿打靠后]。」西门庆道：「这个何须你说费心！」妇人道：「你若负了心，怎的说？」西门庆道：「我若负了心，就是你武大一般！」王婆道：「大官人且休闲说！如今只有一件事要紧地方，天明就要入殓，只怕被[忤作]看出破绽来怎了！[团头]何九，他也是个精细的人，只怕他不肯殓。」西门庆笑道：「这个不妨事，何九我自分付他，他不敢违我的言语。」王婆道：「大官人快去分付他，不可迟了。」西门庆把银子交付与王婆买棺材，他便自去对何九说去了。正是：
 
     三光有影遗谁概， 万事无根只自生！
     雪隐鹭鸶飞始见， 柳藏鹦鹉语方知。
 
 毕竟西门庆怎的对何九说？要知后项如何，且听下回分解：
+
+-------------------------------------------------------------------
+[籴]:zhu.jfif "买进粮食"
+[地里]:zhu.jfif "到处"
+[鸭]:zhu.jfif "骂人话，指乌龟王八，是指戴绿帽子了"
+[主儿]:zhu.jfif "当事人"
+[我先妻丢下个女孩儿]:zhu.jfif "指迎儿"
+[左边的]:zhu.jfif "男性生殖器的隐语。俗传真武大帝脚下有龟蛇二将，龟在左，龟即男阴代词"
+[挂钩子]:zhu.jfif "兜揽主顾做买卖"
+[鞋脚]:zhu.jfif "妇女亲手做的鞋袜之类，作为见面礼"
+[要便]:zhu.jfif "经常，时不时"
+[窝盘]:zhu.jfif "笼络，抚慰"
+[𩫻䯲]:zhu.jfif "鸡巴"
+[早晚]:zhu.jfif "某个时候"
+[天生天化]:zhu.jfif "天意造成"
+[捣子]:zhu.jfif "对人的鄙称。宋时称地痞、光棍为捣子"
+[津送]:zhu.jfif "发送、殡殓"
+[网巾圈儿打靠后]:zhu.jfif "网巾用于裹发，上有总绳结巾，即网巾圈儿。网巾圈狭不过一寸，打在头后处，意即忘在脑后"
+[仵作]:zhu.jfif "衙门里检验死伤、代人殓葬的人"
+[团头]:zhu.jfif "各种行业的头头。此处指仵作头目"
