--- a/005.md
+++ b/005.md
@@ -29,7 +29,7 @@
     喉管枯干，七魄投望乡台上。
     地狱新添食毒鬼，阳间没了捉奸人！
 
-那武大当时哎了两声，喘息了一回，肠胃迸断，呜呼哀哉！身体动不得了！那妇人揭起被来，见了武大咬牙切齿，七窍流血，怕将起来。只得跳下床来，敲那壁子。王婆听得，走过后门头咳嗽。那妇人便下楼来开了后门。王婆问道：「了也未？」那妇人道：「了便了了，只是我手脚软了，安排不得！」王婆道：「有甚么难处？我帮你便了！」那婆子便把衣袖卷起，舀了一桶汤，把抹布撇在里面，掇上楼来。卷过了被，先把武大嘴边唇上都抹了，却把七窍淤血痕迹拭净，便把衣裳盖在身上。两个从楼上一步一掇，扛将下来，就楼下将扇旧门停了。与他梳了头，戴上巾帻，穿了衣裳，取双鞋袜与他穿了，将片白绢盖了脸，拣床干净被盖在死尸身上。却上楼来，收拾得干净了，王婆自转将归去了。那婆娘却号号地假哭起养家人来。看官听说；原来但凡世上妇人，哭有三样：有泪有声谓之哭，有泪无声谓之泣，无泪有声谓之号。当下那妇人干嚎了半夜。次早五更，天色未晓，西门庆奔走讨信，王婆说了备细。西门庆取银子把与王婆，教买棺材[津送]，就叫那妇人商议。这婆娘过来和西门庆说道：「我的武大今日已死，我只靠着你做主，大官人休是[网巾圈儿打靠后]。」西门庆道：「这个何须你说费心！」妇人道：「你若负了心，怎的说？」西门庆道：「我若负了心，就是你武大一般！」王婆道：「大官人且休闲说！如今只有一件事要紧地方，天明就要入殓，只怕被[忤作]看出破绽来怎了！[团头]何九，他也是个精细的人，只怕他不肯殓。」西门庆笑道：「这个不妨事，何九我自分付他，他不敢违我的言语。」王婆道：「大官人快去分付他，不可迟了。」西门庆把银子交付与王婆买棺材，他便自去对何九说去了。正是：
+那武大当时哎了两声，喘息了一回，肠胃迸断，呜呼哀哉！身体动不得了！那妇人揭起被来，见了武大咬牙切齿，七窍流血，怕将起来。只得跳下床来，敲那壁子。王婆听得，走过后门头咳嗽。那妇人便下楼来开了后门。王婆问道：「了也未？」那妇人道：「了便了了，只是我手脚软了，安排不得！」王婆道：「有甚么难处？我帮你便了！」那婆子便把衣袖卷起，舀了一桶汤，把抹布撇在里面，掇上楼来。卷过了被，先把武大嘴边唇上都抹了，却把七窍淤血痕迹拭净，便把衣裳盖在身上。两个从楼上一步一掇，扛将下来，就楼下将扇旧门停了。与他梳了头，戴上巾帻，穿了衣裳，取双鞋袜与他穿了，将片白绢盖了脸，拣床干净被盖在死尸身上。却上楼来，收拾得干净了，王婆自转将归去了。那婆娘却号号地假哭起养家人来。看官听说；原来但凡世上妇人，哭有三样：有泪有声谓之哭，有泪无声谓之泣，无泪有声谓之号。当下那妇人干嚎了半夜。次早五更，天色未晓，西门庆奔走讨信，王婆说了备细。西门庆取银子把与王婆，教买棺材[津送]，就叫那妇人商议。这婆娘过来和西门庆说道：「我的武大今日已死，我只靠着你做主，大官人休是[网巾圈儿打靠后]。」西门庆道：「这个何须你说费心！」妇人道：「你若负了心，怎的说？」西门庆道：「我若负了心，就是你武大一般！」王婆道：「大官人且休闲说！如今只有一件事要紧地方，天明就要入殓，只怕被[仵作]看出破绽来怎了！[团头]何九，他也是个精细的人，只怕他不肯殓。」西门庆笑道：「这个不妨事，何九我自分付他，他不敢违我的言语。」王婆道：「大官人快去分付他，不可迟了。」西门庆把银子交付与王婆买棺材，他便自去对何九说去了。正是：
 
     三光有影遗谁概， 万事无根只自生！
     雪隐鹭鸶飞始见， 柳藏鹦鹉语方知。
